# OptimisationStduies

./: ILCSoft_OptimisationStudies.cmake  README.md  env.sh  init_ilcsoft_OptimisationStduies.sh
AnalysePerformance/: AnalysePerformanceGridJobs.py  AnalysePerformanceGridJobs.pyo  Batch.sh  README.md  SubmitAnalysePerformance.py  batch.sh  runfile.txt
AnalysePerformance/AnalysePerformance_OptimisationStudies/: CMakeLists.txt
Analysis/: JER_vs_HCalCellSize_500GeV_DiJet_Breakdown.C  JER_vs_JetEnergy_HCalAbsorberMaterial.C  JER_vs_JetEnergy_HighEnergyJets.C  JER_vs_ScintillatorECalCellSize.C  JER_vs_ScintillatorECalCellSizeBasicILD.C  JER_vs_ScintillatorECalCellSizeBasicILDNoTimingCuts.C  JER_vs_ScintillatorECalCellSize_500GeV_DiJet_Breakdown.C  JER_vs_ScintillatorECalCellSize_91GeV_DiJet_Breakdown.C  JER_vs_SiliconECalCellSizeNoRealisticDigitisationEffects.C  JER_vs_SiliconECalCellSizeNoRealisticDigitisationEffects_500GeV_DiJet_Breakdown.C  JER_vs_SiliconECalCellSizeNoRealisticDigitisationEffects_91GeV_DiJet_Breakdown.C  JER_vs_SiliconECalCellSizeRealisticDigitisationEffectsNoTimingCuts.C  JER_vs_SiliconECalCellSize_500GeV_DiJet_Breakdown.C  JER_vs_SiliconECalCellSize_91GeV_DiJet_Breakdown.C  JER_vs_SiliconECalCellSize_JMComp.C  MakePlots.py  MakePlots2.py  MakePlotsLogic.py  MakePlotsLogic.pyo  MakePlotsLogic2.py
Calibration/: OptimisationCalibrationRun.sh  OptimisationCalibrationRun2.sh  OptimisationCalibrationRun3.sh  OptimisationCalibrationRunScECal.sh  OptimisationCalibrationRunScECal2.sh  OptimisationCalibration_Template1_Copy1.sh  OptimisationCalibration_Template1_Copy1_Default.sh  OptimisationCalibration_Template1_Copy1_Muon.sh  OptimisationCalibration_Template1_Copy2.sh  OptimisationCalibration_Template1_Copy2_Default.sh  OptimisationCalibration_Template1_Copy2_Muon.sh  OptimisationCalibration_Template2_Copy1.sh  OptimisationCalibration_Template2_Copy2.sh  OptimisationCalibration_Template5_Copy1.sh  OptimisationCalibration_Template5_Copy1_Default.sh  OptimisationCalibration_Template5_Copy1_Muon.sh  OptimisationCalibration_Template5_Copy2.sh  OptimisationCalibration_Template5_Copy2_Default.sh  OptimisationCalibration_Template5_Copy2_Muon.sh  OptimisationCalibration_Template6_Copy1.sh  OptimisationCalibration_Template6_Copy2.sh  condorKiller.sh  predator.sh
DetectorModelConfigFiles/: Detector_Model_104_Config.py  Detector_Model_105_Config.py  Detector_Model_38_Config.py  Detector_Model_84_Config.py  Detector_Model_88_Config.py  Detector_Model_91_Config.py  Detector_Model_95_Config.py  Detector_Model_98_Config.py
DiracTesting/: FileCheckingTest.py
EnergyResolution/: BatchSubmit.sh  EnergyResolutionAnalysisGridJobs.py  EnergyResolutionAnalysisGridJobs.pyo  README.md  SubmitEnergyResolutionAnalysis.py
HEPEvt/: MetaDataSetting.py  UploadHEPEvtToGrid.sh
HaddGridJobs/: Hadd.sh  HaddJobsGrid.py
(+5258 files in other folders)
